# screen-swap

./: .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md
src/screen_swap/: __main__.py  nigh_light.py  screen_data.py  screen_doctor_output.py  sound.py
