[build-system]
requires = ["setuptools", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "screen_swap"
description = "Change screen configuration."
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = []

[project.scripts]
screen_swap = "screen_swap:main"

[tool.setuptools-git-versioning]
enabled = true

[tool.ruff]
select = ["ALL"]
ignore = [
    "D10", # everything should have docstrings
    "S603", # subprocess-without-shell-equals-true
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
]

unfixable = []
