[build-system]
requires = ["setuptools", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "screen_swap"
description = "Change screen configuration."
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = []

[project.scripts]
screen_swap = "screen_swap.__main__:main"

[tool.setuptools-git-versioning]
enabled = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D10", # everything should have docstrings
    "S603", # subprocess-without-shell-equals-true
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
]
unfixable = []


[tool.vulture]
# ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["src"]
sort_by_size = true
